--- a/package.json
+++ b/package.json
@@ -16,7 +16,13 @@
     "electron-store": "^8.0.1"
   },
   "devDependencies": {
-    "@material-ui/core": "^4.12.3",
+    "@emotion/react": "^11.8.1",
+    "@emotion/styled": "^11.8.1",
+    "@mui/icons-material": "^5.5.0",
+    "@mui/lab": "^5.0.0-alpha.72",
+    "@mui/material": "^5.5.0",
+    "@mui/styles": "^5.6.2",
+    "@mui/system": "^5.5.0",
     "@types/node": "^14.14.31",
     "@types/react": "^16.9.49",
     "electron": "^17.1.2",
