--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@nut-tree/nut-js": "^2.0.1",
+    "axios": "^0.27.2",
     "electron-serve": "^1.1.0",
     "electron-store": "^8.0.1"
   },
