--- a/package.json
+++ b/package.json
@@ -1,9 +1,7 @@
 {
   "private": true,
-  "name": "my-nextron-app",
-  "description": "My application description",
-  "version": "1.0.0",
-  "author": "Yoshihide Shiono <shiono.yoshihide@gmail.com>",
+  "name": "awy-bot",
+  "version": "0.0.1",
   "main": "app/background.js",
   "scripts": {
     "dev": "nextron",
