--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@mui/material": "^5.5.0",
     "@mui/styles": "^5.6.2",
     "@mui/system": "^5.5.0",
+    "@trivago/prettier-plugin-sort-imports": "^3.2.0",
     "@types/node": "^14.14.31",
     "@types/react": "^16.9.49",
     "electron": "^17.1.2",
