--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -2,6 +2,8 @@ appId: com.caioedut.awybot
 productName: Awy Bot
 copyright: Copyright © CaioEduT
 
+asar: false
+
 directories:
   output: build
   buildResources: resources
