--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   },
   "dependencies": {
     "electron-serve": "^1.1.0",
-    "electron-store": "^8.0.1"
+    "electron-store": "^8.0.1",
+    "ini": "^3.0.0"
   },
   "devDependencies": {
     "@emotion/react": "^11.8.1",
