--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "postinstall": "electron-builder install-app-deps"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "electron-serve": "^1.1.0",
     "electron-store": "^8.0.1",
     "ini": "^3.0.0"
