--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "axios": "^0.27.2",
+    "dot-object": "^2.1.4",
     "electron-serve": "^1.1.0",
     "electron-store": "^8.0.1",
     "ini": "^3.0.0"
@@ -24,6 +25,8 @@
     "@mui/material": "^5.5.0",
     "@mui/styles": "^5.6.2",
     "@mui/system": "^5.5.0",
+    "@react-bulk/core": "0.3.1",
+    "@react-bulk/web": "0.3.1",
     "@trivago/prettier-plugin-sort-imports": "^3.2.0",
     "@types/node": "^14.14.31",
     "@types/react": "^16.9.49",
@@ -34,6 +37,6 @@
     "prettier": "^2.6.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "typescript": "^4.6.2"
+    "typescript": "^5.0.4"
   }
 }
