--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-bulk/core": "0.5.0",
     "@react-bulk/web": "0.5.0",
     "@trivago/prettier-plugin-sort-imports": "^3.2.0",
+    "@types/dot-object": "^2.1.2",
     "@types/node": "^18.11.18",
     "@types/react": "18.2.7",
     "axios": "^0.27.2",
