feat: new settings

--- a/package.json
+++ b/package.json
@@ -1,9 +1,15 @@
 {
-  "private": true,
   "name": "awy-bot",
   "description": "Remap key bindings and automate tasks",
   "version": "0.4.1",
-  "author": "CaioEduT <caioedut@gmail.com>",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/caioedut/awy-bot"
+  },
+  "author": {
+    "name": "Caio Teixeira",
+    "email": "caioedut@gmail.com"
+  },
   "main": "app/background.js",
   "scripts": {
     "dev": "nextron",
@@ -15,13 +21,13 @@
     "electron-store": "^8.1.0"
   },
   "devDependencies": {
-    "@react-bulk/core": "0.5.0",
-    "@react-bulk/web": "0.5.0",
+    "@react-bulk/core": "^0.8.1",
+    "@react-bulk/web": "^0.8.1",
     "@trivago/prettier-plugin-sort-imports": "^3.2.0",
-    "@types/dot-object": "^2.1.2",
-    "@types/node": "^18.11.18",
-    "@types/react": "18.2.7",
-    "axios": "^0.27.2",
+    "@types/dot-object": "^2.1.6",
+    "@types/node": "^20.11.20",
+    "@types/react": "^18.2.58",
+    "axios": "^1.6.7",
     "dot-object": "^2.1.4",
     "electron": "^21.3.3",
     "electron-builder": "^23.6.0",
@@ -32,6 +38,6 @@
     "prettier": "^2.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "typescript": "^5.0.4"
+    "typescript": "^5.3.3"
   }
 }
